--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,9 @@
           <a class="nav-link " [routerLinkActive]="['active']" [routerLink]="['/users']">Usuarios<i class="fa fa-users"></i></a>
       </li>
       <li class="nav-item ">
+          <a class="nav-link " [routerLinkActive]="['active']" [routerLink]="['/providers']">Proveedores<i class="fa fa-users"></i></a>
+      </li>
+      <li class="nav-item ">
           <a class="nav-link" [routerLinkActive]="['active']" [routerLink]="['/register']">Registro<i class="fa fa-sign-out"></i></a>
       </li>
       <li class="nav-item ">
