--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -3,44 +3,32 @@
         <div class="col-md-12">
             <div class="row">
                 <div class="col-md-6 mx-auto">
-
-                    
                     <div class="card rounded-0">
                         <div class="card-header ">
                             <h3 class="mb-0 fnt-disp-20-bld">Iniciar Sesión</h3>
                         </div>
                         <div class="card-body">
-                            <form class="form" role="form" autocomplete="off" id="formLogin" novalidate="" method="POST">
+                            <form class="form" role="form" autocomplete="off" id="formLogin" novalidate="" >
                                 <div class="form-group">
-                                    <label for="uname1" class="fnt-monts-14-bld">Usuario</label>
-                                    <input type="text" class="form-control form-control-lg rounded-0" name="uname1" id="uname1" required="">
+                                    <label for="nick_name" class="fnt-monts-14-bld">Usuario</label>
+                                    <input type="text" class="form-control form-control-lg rounded-0" name="nick_name" [(ngModel)]="loginUserData.nick_name" required>
                                     <div class="invalid-feedback">Oops, olvidaste poner tu usuario.</div>
                                 </div>
                                 <div class="form-group">
                                     <label class="fnt-monts-14-bld ">Contraseña</label>
-                                    <input type="password" class="form-control form-control-lg rounded-0" id="pwd1" required="" autocomplete="new-password">
+                                    <input type="password" class="form-control form-control-lg rounded-0" name="password" [(ngModel)]="loginUserData.password" required>
                                     <div class="invalid-feedback">Es necesario poner tu contraseña!</div>
                                 </div>
-                                <div class="custom-control custom-checkbox mb-3">
-                                    <input type="checkbox" class="custom-control-input" id="customCheck" name="example1">
+                                <!-- <div class="custom-control custom-checkbox mb-3">
+                                    <input type="checkbox" submitclass="custom-control-input" id="customCheck" name="example1">
                                     <label class="custom-control-label fnt-monts-14-bld" for="customCheck">No cerrar sesión</label>
-                                  </div>
-                                <button type="submit" class="btn blue-btn btn-lg float-right" id="btnLogin">Inicio</button>
+                                  </div> -->
+                                <button type="button" (click)="loginUser()" class="btn blue-btn btn-lg float-right" id="btnLogin">Inicio</button>
                             </form>
                         </div>
-            
                     </div>
-            
-
                 </div>
-
-
             </div>
-            
-
         </div>
-        
     </div>
-    
 </div>
-
