--- a/src/app/components/unit/unit.component.html
+++ b/src/app/components/unit/unit.component.html
@@ -3,23 +3,63 @@
 
   <div class="container bootstrap snippet">
       <div class="row">
-          <div class="col-lg-12">
+          <div class="col-lg-8">
               <div class="main-box no-header clearfix">
                   <div class="main-box-body clearfix">
                     <div class=" col-md-12 mb-3">
-                        <p>Titulo chido</p>
+                        <p>Unidades</p>
                         <form class="needs-validation" novalidate>
                             <div class="form-row">
                               <div class="col-md-4 mb-3">
-                                <label for="validationCustom01">Nombre(s)</label>
-                                <input type="text" class="form-control" name="firstName" class="form-control" #firstName="ngModel" [(ngModel)]="user.first_name" id="validationCustom01" placeholder="Lyria Fernanda"  required>
+                                <label for="validationCustom01">Nombre de la Unidad</label>
+                                <input type="text" class="form-control" name="name" class="form-control" #name="ngModel" [(ngModel)]="unit.name" id="validationCustom01" placeholder="KG, Reja , Costal"  required>
                               </div>
                             </div>
-                            <button class="btn btn-primary float-right mb-3" type="reset" (click)="createUser()">Agregar</button>
+                            <button class="btn btn-primary float-right mb-3" type="reset" (click)="createUnit()">Agregar</button>
                           </form>
                     </div>
                   </div>
               </div>
             </div>
+      </div>
+  </div>
+
+  <div class="container bootstrap snippet">
+      <div class="row">
+          <div class="col-lg-8">
+                      <div class="table-responsive">
+                          <div class="main-box no-header clearfix">
+                              <div class="main-box-body clearfix">
+                          <table class="table user-list" >
+                              <thead>
+                                  <tr >
+                                  <th><span>Unidad</span></th>
+                                  <th>Opciones</th>
+                                  </tr >
+                              </thead>
+                              <tbody>
+                                  <tr *ngFor="let u of units">
+                                      <td>{{u.name}}</td>
+                                      <td style="width: 20%;">
+                                          <a routerLink="/units/update/{{u._id}}" class="table-link">
+                                              <span class="fa-stack">
+                                                  <i class="fa fa-square fa-stack-2x"></i>
+                                                  <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
+                                              </span>
+                                          </a>
+                                          <a class="table-link danger" (click)="deleteUnit(u._id)">
+                                              <span class="fa-stack">
+                                                  <i class="fa fa-square fa-stack-2x"></i>
+                                                  <i class="fa fa-trash-o fa-stack-1x fa-inverse"></i>
+                                              </span>
+                                          </a>
+                                      </td>
+                                  </tr>
+                              </tbody>
+                          </table>
+                      </div>
+                  </div>
+                </div>
+              </div>
       </div>
   </div>
