--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,30 +1,41 @@
 <nav class="navbar navbar-expand-sm blueNav navbar-dark fixed-top">
-  <a [routerLink]="['/login']" class="navbar-brand fnt-disp-bld">{{cafeName}}<i class="fa fa-coffee"></i></a>
-  <ul class="navbar-nav fnt-disp-16-rg">
-      <li class="nav-item ">
-          <a class="nav-link " *ngIf="rest.loggedIn()" [routerLinkActive]="['active']" [routerLink]="['/users']">Usuarios<i class="fa fa-users"></i></a>
-      </li>
-      <li class="nav-item ">
-          <a class="nav-link " *ngIf="rest.loggedIn()" [routerLinkActive]="['active']" [routerLink]="['/providers']">Proveedores<i class="fa fa-users"></i></a>
-      </li>
-      <li class="nav-item ">
-        <a class="nav-link " *ngIf="rest.loggedIn()" [routerLinkActive]="['active']" [routerLink]="['/dinningRooms']">Comedores<i class="fa fa-users"></i></a>
-    </li>
-      <li class="nav-item ">
-          <a class="nav-link " *ngIf="rest.loggedIn()" [routerLinkActive]="['active']" [routerLink]="['/units']">Unidades<i class="fa fa-users"></i></a>
-      </li>
-      <li class="nav-item ">
-          <a class="nav-link" *ngIf="!rest.loggedIn()" [routerLinkActive]="['active']" [routerLink]="['/register']">Registro<i class="fa fa-sign-out"></i></a>
-      </li>
-      <li class="nav-item ">
-          <a class="nav-link" *ngIf="!rest.loggedIn()" [routerLinkActive]="['active']" [routerLink]="['/login']">Inicio de sesion<i class="fa fa-sign-in"></i></a>
-      </li>
-      <li class="nav-item ">
-          <a class="nav-link" *ngIf="rest.loggedIn()" [routerLinkActive]="['active']" (click)="rest.logoutUser()">Logout<i class="fa fa-sign-in"></i></a>
-      </li>
-  </ul>
+    <a [routerLink]="['/login']" class="navbar-brand fnt-disp-bld">{{cafeName}}<i class="fa fa-coffee"></i></a>
+    <ul class="navbar-nav fnt-disp-16-rg">
+        <li class="nav-item ">
+            <a class="nav-link " *ngIf="rest.loggedIn()" [routerLinkActive]="['active']" [routerLink]="['/users']">Usuarios<i
+                    class="fa fa-users"></i></a>
+        </li>
+        <li class="nav-item ">
+            <a class="nav-link " *ngIf="rest.loggedIn()" [routerLinkActive]="['active']" [routerLink]="['/providers']">Proveedores<i
+                    class="fa fa-users"></i></a>
+        </li>
+        <li class="nav-item ">
+            <a class="nav-link " *ngIf="rest.loggedIn()" [routerLinkActive]="['active']" [routerLink]="['/dinningRooms']">Comedores<i
+                    class="fa fa-users"></i></a>
+        </li>
+        <li class="nav-item ">
+            <a class="nav-link " *ngIf="rest.loggedIn()" [routerLinkActive]="['active']" [routerLink]="['/units']">Unidades<i
+                    class="fa fa-users"></i></a>
+        </li>
+        <li class="nav-item ">
+            <a class="nav-link " *ngIf="rest.loggedIn()" [routerLinkActive]="['active']" [routerLink]="['/requests']">Pedidos<i
+                    class="fa fa-users"></i></a>
+        </li>
+        <li class="nav-item ">
+            <a class="nav-link" *ngIf="!rest.loggedIn()" [routerLinkActive]="['active']" [routerLink]="['/register']">Registro<i
+                    class="fa fa-sign-out"></i></a>
+        </li>
+        <li class="nav-item ">
+            <a class="nav-link" *ngIf="!rest.loggedIn()" [routerLinkActive]="['active']" [routerLink]="['/login']">Inicio
+                de sesion<i class="fa fa-sign-in"></i></a>
+        </li>
+        <li class="nav-item ">
+            <a class="nav-link" *ngIf="rest.loggedIn()" [routerLinkActive]="['active']" (click)="rest.logoutUser()">Logout<i
+                    class="fa fa-sign-in"></i></a>
+        </li>
+    </ul>
 </nav>
 
 <div class="divPad">
-  <router-outlet></router-outlet>
+    <router-outlet></router-outlet>
 </div>
