--- a/src/app/components/request/edit/editRequest.component.html
+++ b/src/app/components/request/edit/editRequest.component.html
@@ -1,57 +1,88 @@
 <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
-  <div class="container bootstrap snippet">
-      <div class="row">
-          <div class="col-lg-12">
-              <div class="main-box no-header clearfix">
-                  <div class="main-box-body clearfix">
+
+<div class="container bootstrap snippet">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="main-box no-header clearfix">
+                <div class="main-box-body clearfix">
                     <div class=" col-md-12 mb-3">
-                        <p>Actualizar usuario</p>
+                        <p>Titulo chido</p>
                         <form class="needs-validation" novalidate>
+
                             <div class="form-row">
-                              <div class="col-md-4 mb-3">
-                                <label for="validationCustom01">Nombre(s)</label>
-                                <input type="text" class="form-control" name="firstName" class="form-control" #firstName="ngModel" [(ngModel)]="user.first_name" id="validationCustom01" placeholder="Lyria Fernanda"  required>
-                              </div>
-                              <div class="col-md-4 mb-3">
-                                <label for="validationCustom02">Apellido(s)</label>
-                                <input type="text" class="form-control" name="lastName" #lastName="ngModel" [(ngModel)]="user.last_name" id="validationCustom02" placeholder="Gonzalez" required>
-                              </div>
-                              <div class="col-md-4 mb-3">
-                                <label for="validationCustomUsername">Usuario</label>
-                                <div class="input-group">
-                                  <div class="input-group-prepend">
-                                    <span class="input-group-text" id="inputGroupPrepend">@</span>
-                                  </div>
-                                  <input type="text" class="form-control" id="validationCustomUsername" name="nickName" #nickName="ngModel" [(ngModel)]="user.nick_name" placeholder="lyriaGlez" aria-describedby="inputGroupPrepend" required>
+
+                                <div class="col-md-3 mb-3">
+                                    <label for="validationCustom05">Comedor que reliza el pedido</label>
+                                    <select id="inputType" class="form-control" name="userType" #userType="ngModel" [(ngModel)]="req.dRoom" required>
+                                        <option selected>{{req.dRoom}}</option>
+                                        <option *ngFor="let dr of dRooms">{{dr._id}}</option>
+                                    </select>
                                 </div>
-                              </div>
+
+                                <br>
+                                    
+                                        <div class="container">
+                                                <p>Productos seleccionados</p>
+                                                <table class="table user-list">
+                                                        <thead>
+                                                            <tr>
+                                                                <th><span>Producto</span></th>
+                                                                <th><span>Category</span></th>
+                                                            </tr>
+                                                        </thead>
+                                                        <tbody>
+                                                            <tr *ngFor="let sl of selected, let i = index">
+                                                                <td>
+                                                                    <a href="#" class="user-link">{{sl.name}} {{i}}</a>
+                                                                </td>
+                                                                <td>
+                                                                    <a href="#" class="user-link">{{sl.unit}}</a>
+                                                                </td>
+                                                                <td>
+                                                                    <a class="table-link danger" (click)="deleteItem(i)">
+                                                                        <span class="fa-stack">
+                                                                            <i class="fa fa-square fa-stack-2x"></i>
+                                                                            <i class="fa fa-trash-o fa-stack-1x fa-inverse"></i>
+                                                                        </span>
+                                                                    </a>
+                                                                </td>
+                                                            </tr>
+                                                        </tbody>
+                                                    </table>
+                                        </div>
+                                
+
+                                <div class="row">
+
+                                    
+                                </div>
                             </div>
-                            <div class="form-row">
-                              <div class="col-md-5 mb-3">
-                                <label for="validationCustom03">Correo electrónico</label>
-                                <input type="text" class="form-control" name="email" #email="ngModel" [(ngModel)]="user.email" id="validationCustom03" placeholder="lyriaglez@gmail.com" required>
-                              </div>
-                              <div class="col-md-4 mb-3">
-                                <label for="validationCustom04">Contraseña</label>
-                                <input type="password" class="form-control" name="password" #password="ngModel" [(ngModel)]="user.password" id="validationCustom04" placeholder="*******" required>
-                              </div>
-                              <div class="col-md-3 mb-3">
-                                <label for="validationCustom05">Tipo de usuario</label>
-                                <select id="inputType" class="form-control" name="userType" #userType="ngModel" [(ngModel)]="user.user_type" required>
-                                    <option> Elegir...</option>
-                                    <option>Admin</option>
-                                    <option>Finanza</option>
-                                    <option selected="">Chef</option>
-                                    <option>Compras</option>
-                                </select>
-                              </div>
-                            </div>
-                            <button class="btn btn-primary float-right mb-3" type="reset" (click)="updateUser()">Actualizar</button>
-                          </form>
+                            <button class="btn btn-primary float-right mb-3" type="reset" (click)="updateRequest()">Editar</button>
+                        </form>
                     </div>
-              
-          </div>   
-      </div>
-  </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+<br>
+<div class="container">
+        <div class="row">
+                <div *ngFor="let p of products" class="col-sm-3">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">{{p.name}}</h5>
+                                <p class="card-text">{{p.category}}
+                                </p>
+                                <p class="card-text font-weight-bold">{{p.unit}}
+                                    </p>
+                                <a class="btn btn-primary" (click)="addProduct(p.name,p.category)">Add</a>
+                            </div>
+                        </div>
+                    </div>
+        </div>
 </div>
+<br>
+<br>
+<br>
