--- a/src/app/components/request/request.component.html
+++ b/src/app/components/request/request.component.html
@@ -27,7 +27,7 @@
                                                         <thead>
                                                             <tr>
                                                                 <th><span>Producto</span></th>
-                                                                <th><span>Unidad</span></th>
+                                                                <th><span>Category</span></th>
                                                             </tr>
                                                         </thead>
                                                         <tbody>
@@ -46,21 +46,10 @@
 
                                 <div class="row">
 
-                                    <div *ngFor="let p of products" class="col-sm-6">
-                                        <div class="card">
-                                            <div class="card-body">
-                                                <h5 class="card-title">{{p.name}}</h5>
-                                                <p class="card-text">{{p.category}}
-                                                </p>
-                                                <p class="card-text font-weight-bold">{{p.unit.name}}
-                                                    </p>
-                                                <a href="#" class="btn btn-primary">Add</a>
-                                            </div>
-                                        </div>
-                                    </div>
+                                    
                                 </div>
                             </div>
-                            <button class="btn btn-primary float-right mb-3" type="reset" (click)="createUser()">Agregar</button>
+                            <button class="btn btn-primary float-right mb-3" type="reset" (click)="createRequest()">Agregar</button>
                         </form>
                     </div>
 
@@ -69,6 +58,26 @@
         </div>
     </div>
 </div>
+<br>
+<div class="container">
+        <div class="row">
+                <div *ngFor="let p of products" class="col-sm-3">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">{{p.name}}</h5>
+                                <p class="card-text">{{p.category}}
+                                </p>
+                                <p class="card-text font-weight-bold">{{p.unit}}
+                                    </p>
+                                <a class="btn btn-primary" (click)="addProduct(p.name,p.category)">Add</a>
+                            </div>
+                        </div>
+                    </div>
+        </div>
+</div>
+<br>
+<br>
+<br>
 
 <div class="container bootstrap snippet">
     <div class="row">
@@ -96,13 +105,13 @@
                                         <span class="badge badge-primary">{{rq.status}}</span>
                                     </td>
                                     <td style="width: 20%;">
-                                        <a routerLink="/users/edit/{{rq._id}}" class="table-link">
+                                        <a routerLink="/requests/update/{{rq._id}}" class="table-link">
                                             <span class="fa-stack">
                                                 <i class="fa fa-square fa-stack-2x"></i>
                                                 <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
                                             </span>
                                         </a>
-                                        <a class="table-link danger" (click)="deleteUser(rq._id)">
+                                        <a class="table-link danger" (click)="deleteRequest(rq._id)">
                                             <span class="fa-stack">
                                                 <i class="fa fa-square fa-stack-2x"></i>
                                                 <i class="fa fa-trash-o fa-stack-1x fa-inverse"></i>
