--- a/src/app/components/unit/unit.component.html
+++ b/src/app/components/unit/unit.component.html
@@ -7,7 +7,7 @@
               <div class="main-box no-header clearfix">
                   <div class="main-box-body clearfix">
                     <div class=" col-md-12 mb-3">
-                        <p>Titulo chido</p>
+                        <p>Unidades</p>
                         <form class="needs-validation" novalidate>
                             <div class="form-row">
                               <div class="col-md-4 mb-3">
@@ -42,7 +42,7 @@
                                         <img src="https://bootdey.com/img/Content/user_1.jpg" alt="">
                                         <a href="#" class="user-link">{{u.name}}</a>
                                     </td>
-                                    <td style="width: 20%;">
+                                    <td style="width: 20%;"  *ngIf="rest.loggedIn() && rest.getRole()=='Admin' || rest.getRole()=='Gerente'">
                                         <a routerLink="/units/update//{{u._id}}" class="table-link">
                                             <span class="fa-stack">
                                                 <i class="fa fa-square fa-stack-2x"></i>
@@ -65,4 +65,3 @@
             </div>
     </div>
 </div>
-
