--- a/src/app/components/users/user.component.html
+++ b/src/app/components/users/user.component.html
@@ -1,7 +1,7 @@
 
 <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
 
-  <div class="container bootstrap snippet">
+  <div class="container bootstrap snippet" *ngIf="rest.getRole()=='Admin'">
       <div class="row">
           <div class="col-lg-12">
               <div class="main-box no-header clearfix">
@@ -40,10 +40,9 @@
                               <div class="col-md-3 mb-3">
                                 <label for="validationCustom05">Tipo de usuario</label>
                                 <select id="inputType" class="form-control" name="userType" #userType="ngModel" [(ngModel)]="user.user_type" required>
-                                    <option> Elegir...</option>
                                     <option>Admin</option>
-                                    <option>Finanza</option>
-                                    <option selected="">Chef</option>
+                                    <option>Chef</option>
+                                    <option>Gerente</option>
                                     <option>Compras</option>
                                 </select>
                               </div>
@@ -51,7 +50,6 @@
                             <button class="btn btn-primary float-right mb-3" type="reset" (click)="createUser()">Agregar</button>
                           </form>
                     </div>
-
           </div>
       </div>
   </div>
@@ -71,7 +69,7 @@
                                 <th><span>Fecha de registro</span></th>
                                 <th class="text-center"><span>Rol</span></th>
                                 <th><span>Correo electrónico</span></th>
-                                <th>Opciones</th>
+                                <th *ngIf="rest.getRole()=='Admin'">Opciones</th>
                                 </tr >
                             </thead>
                             <tbody>
@@ -88,7 +86,7 @@
                                     <td>
                                         <a href="#">{{u.email}}</a>
                                     </td>
-                                    <td style="width: 20%;">
+                                    <td style="width: 20%;" *ngIf="rest.getRole()=='Admin'">
                                         <a routerLink="/users/edit/{{u._id}}" class="table-link">
                                             <span class="fa-stack">
                                                 <i class="fa fa-square fa-stack-2x"></i>
