--- a/src/app/components/products/product.component.html
+++ b/src/app/components/products/product.component.html
@@ -10,45 +10,41 @@
                         <p>Titulo chido</p>
                         <form class="needs-validation" novalidate>
                             <div class="form-row">
-                              <div class="col-md-4 mb-3">
-                                <label for="validationCustom01">Nombre(s)</label>
-                                <input type="text" class="form-control" name="firstName" class="form-control" #firstName="ngModel" [(ngModel)]="user.first_name" id="validationCustom01" placeholder="Lyria Fernanda"  required>
-                              </div>
-                              <div class="col-md-4 mb-3">
-                                <label for="validationCustom02">Apellido(s)</label>
-                                <input type="text" class="form-control" name="lastName" #lastName="ngModel" [(ngModel)]="user.last_name" id="validationCustom02" placeholder="Gonzalez" required>
-                              </div>
-                              <div class="col-md-4 mb-3">
-                                <label for="validationCustomUsername">Usuario</label>
-                                <div class="input-group">
-                                  <div class="input-group-prepend">
-                                    <span class="input-group-text" id="inputGroupPrepend">@</span>
-                                  </div>
-                                  <input type="text" class="form-control" id="validationCustomUsername" name="nickName" #nickName="ngModel" [(ngModel)]="user.nick_name" placeholder="lyriaGlez" aria-describedby="inputGroupPrepend" required>
+                                <div class="col-md-4 mb-3">
+                                    <label for="validationCustom01">Nombre(s)</label>
+                                    <input type="text" class="form-control" name="pName" class="form-control" #pName="ngModel" [(ngModel)]="product.name" id="validationCustom01" placeholder="Naranja"  required>
                                 </div>
-                              </div>
+                                <div class="col-md-3 mb-3">
+                                    <label for="validationCustom05">Tipo de unidad</label>
+                                    <select id="inputType" class="form-control" name="pUnit" #pUnit="ngModel" [(ngModel)]="product.unit" required>
+                                        <option selected> {{product.unit}}</option>
+                                        <option *ngFor="let u of units ">{{u._id}}</option>
+                                    </select>
+                                  </div>
+                                  <div class="col-md-3 mb-3">
+                                    <label for="validationCustom05">Categoria</label>
+                                    <select id="inputType" class="form-control" name="pCat" #pCat="ngModel" [(ngModel)]="product.category" required>
+                                        <option selected> {{product.category}}</option>
+                                        <option *ngFor="let ct of ptypes ">{{ct._id}}</option>
+                                    </select>
+                                  </div>
+                                </div>
+                                <div class="form-row">
+                                  <div class="col-md-5 mb-3">
+                                    <label for="validationCustom03">Descripción</label>
+                                    <input type="text" class="form-control" name="pDesc" #pDesc="ngModel" [(ngModel)]="product.description" id="validationCustom03" placeholder="Naranja traida de las granjas de XXXXX" required>
+                                  </div>
+                                  <div class="col-md-4 mb-3">
+                                    <label for="validationCustomUsername">Precio</label>
+                                    <div class="input-group">
+                                      <div class="input-group-prepend">
+                                        <span class="input-group-text" id="inputGroupPrepend">$</span>
+                                      </div>
+                                      <input type="text" class="form-control" id="validationCustomUsername" name="pPrice" #pPrice="ngModel" [(ngModel)]="product.price" placeholder="13.00" aria-describedby="inputGroupPrepend" required>
+                                    </div>
+                                  </div>    
                             </div>
-                            <div class="form-row">
-                              <div class="col-md-5 mb-3">
-                                <label for="validationCustom03">Correo electrónico</label>
-                                <input type="text" class="form-control" name="email" #email="ngModel" [(ngModel)]="user.email" id="validationCustom03" placeholder="lyriaglez@gmail.com" required>
-                              </div>
-                              <div class="col-md-4 mb-3">
-                                <label for="validationCustom04">Contraseña</label>
-                                <input type="password" class="form-control" name="password" #password="ngModel" [(ngModel)]="user.password" id="validationCustom04" placeholder="*******" required>
-                              </div>
-                              <div class="col-md-3 mb-3">
-                                <label for="validationCustom05">Tipo de usuario</label>
-                                <select id="inputType" class="form-control" name="userType" #userType="ngModel" [(ngModel)]="user.user_type" required>
-                                    <option> Elegir...</option>
-                                    <option>Admin</option>
-                                    <option>Finanza</option>
-                                    <option selected="">Chef</option>
-                                    <option>Compras</option>
-                                </select>
-                              </div>
-                            </div>
-                            <button class="btn btn-primary float-right mb-3" type="reset" (click)="createUser()">Agregar</button>
+                            <button class="btn btn-primary float-right mb-3" type="reset" (click)="createProducts()">Agregar</button>
                           </form>
                     </div>
 
@@ -67,35 +63,38 @@
                         <table class="table user-list" >
                             <thead>
                                 <tr >
-                                <th><span>Usuario</span></th>
-                                <th><span>Fecha de registro</span></th>
-                                <th class="text-center"><span>Rol</span></th>
-                                <th><span>Correo electrónico</span></th>
+                                <th><span>Producto</span></th>
+                                <th><span>Unidad</span></th>
+                                <th class="text-center"><span>Categoria</span></th>
+                                <th><span>Precio</span></th>
                                 <th>Opciones</th>
                                 </tr >
                             </thead>
                             <tbody>
-                                <tr *ngFor="let u of users">
+                                <tr *ngFor="let p of products">
                                     <td>
                                         <img src="https://bootdey.com/img/Content/user_1.jpg" alt="">
-                                        <a href="#" class="user-link">{{u.first_name}} {{u.last_name}}</a>
-                                        <span class="user-subhead">{{u.nick_name}}</span>
+                                        <a href="#" class="user-link">{{p.name}} </a>
+                                        <span class="user-subhead">{{p.description}}</span>
                                     </td>
-                                    <td>{{u.registration_Date}}</td>
+                                    
                                     <td class="text-center">
-                                        <span class="badge badge-primary">{{u.user_type}}</span>
+                                        <span class="badge badge-primary">{{p.unit.name}}</span>
                                     </td>
                                     <td>
-                                        <a href="#">{{u.email}}</a>
+                                        <a href="#">{{p.category.type}}</a>
+                                    </td>
+                                    <td>
+                                        <a href="#">{{p.price}}</a>
                                     </td>
                                     <td style="width: 20%;">
-                                        <a routerLink="/users/edit/{{u._id}}" class="table-link">
+                                        <a routerLink="/products/update/{{p._id}}" class="table-link">
                                             <span class="fa-stack">
                                                 <i class="fa fa-square fa-stack-2x"></i>
                                                 <i class="fa fa-pencil fa-stack-1x fa-inverse"></i>
                                             </span>
                                         </a>
-                                        <a class="table-link danger" (click)="deleteUser(u._id)">
+                                        <a class="table-link danger" (click)="deleteProducts(p._id)">
                                             <span class="fa-stack">
                                                 <i class="fa fa-square fa-stack-2x"></i>
                                                 <i class="fa fa-trash-o fa-stack-1x fa-inverse"></i>
