--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,6 +30,10 @@
             <a class="nav-link"  [routerLinkActive]="['active']" [routerLink]="['/register']">Registro<i
                     class="fa fa-sign-out"></i></a>
         </li>
+        <li class="nav-item " *ngIf="rest.loggedIn()">
+            <a class="nav-link"  [routerLinkActive]="['active']" [routerLink]="['/products']">Productos<i
+                    class="fa fa-sign-out"></i></a>
+        </li>
         <li class="nav-item " *ngIf="!rest.loggedIn()">
             <a class="nav-link"  [routerLinkActive]="['active']" [routerLink]="['/login']">Inicio
                 de sesion<i class="fa fa-sign-in"></i></a>
